--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/CF-Jass/project-week#readme",
   "dependencies": {
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "pg": "^7.12.1",
     "superagent": "^5.1.0"
   }
