--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/CF-Jass/project-week#readme",
   "dependencies": {
+    "dotenv": "^8.1.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "pg": "^7.12.1",
     "superagent": "^5.1.0"
