--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "nodemon": "^1.19.2",
     "pg": "^7.12.1",
     "sharer.js": "^0.3.8",
     "superagent": "^5.1.0"
